// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DeployableAwsCdkTypeScriptAppStepsFactory diffAnnotationJobs Should generate diff annotation jobs When Auth provider and npm config set 1`] = `
{
  "Diff-Annotation-Comment": {
    "needs": [
      "Diff-Annotation-Dev",
      "Diff-Annotation-Prod",
    ],
    "permissions": {
      "contents": "read",
      "pullRequests": "write",
    },
    "runsOn": [
      "ubuntu-latest",
    ],
    "steps": [
      {
        "continueOnError": undefined,
        "env": undefined,
        "id": undefined,
        "if": undefined,
        "name": "Download all diff artifacts",
        "timeoutMinutes": undefined,
        "uses": "actions/download-artifact@v8",
        "with": {
          "merge-multiple": true,
          "path": "diff-outputs",
          "pattern": "diff-output-*",
        },
        "workingDirectory": undefined,
      },
      {
        "name": "Annotate PR with Diff Output",
        "uses": "mshick/add-pr-comment@v3",
        "with": {
          "message-id": "diff-output",
          "message-path": "diff-outputs/*.md",
          "refresh-message-position": true,
        },
      },
    ],
  },
  "Diff-Annotation-Dev": {
    "env": {
      "STACK_ENV": "Dev",
    },
    "needs": [
      "build",
    ],
    "permissions": {
      "contents": "read",
      "idToken": "write",
    },
    "runsOn": [
      "ubuntu-latest",
    ],
    "steps": [
      {
        "continueOnError": undefined,
        "env": undefined,
        "id": undefined,
        "if": undefined,
        "name": "Checkout",
        "timeoutMinutes": undefined,
        "uses": "actions/checkout@v6",
        "with": {
          "fetch-depth": 0,
          "ref": "\${{ github.sha }}",
        },
        "workingDirectory": undefined,
      },
      {
        "name": "Setup pnpm",
        "uses": "pnpm/action-setup@v5",
        "with": {
          "version": "10",
        },
      },
      {
        "name": "Setup Node.js",
        "uses": "actions/setup-node@v6",
        "with": {
          "node-version": "20.0.0",
          "package-manager-cache": false,
        },
      },
      {
        "name": "Install dependencies",
        "run": "pnpm i --frozen-lockfile",
      },
      {
        "env": {
          "accessKeyId": "\${{ secrets[AWS_ACCESS_KEY_ID] }}",
          "region": "us-east-1",
          "secretAccessKey": "\${{ secrets[AWS_SECRET_ACCESS_KEY] }}",
        },
        "if": undefined,
        "name": "Configure AWS Credentials",
        "run": "echo "AWS_ACCESS_KEY_ID=$accessKeyId" >> $GITHUB_ENV
echo "AWS_SECRET_ACCESS_KEY=$secretAccessKey" >> $GITHUB_ENV
echo "AWS_REGION=$region" >> $GITHUB_ENV",
      },
      {
        "env": {
          "CONFIG_VALUE": "Dev",
        },
        "name": "Setting NPM Config",
        "run": "npm config set TEST_CONFIG_ENV $CONFIG_VALUE",
      },
      {
        "if": undefined,
        "name": "Run Generate Diff Output",
        "run": "pnpm run diff:output",
      },
      {
        "env": {
          "environment": "Dev",
        },
        "id": "formatted_diff_annotation_comment",
        "name": "Get formatted diff annotation comment",
        "run": "mkdir -p diff-output
echo "### Changes for environment Dev" > diff-output/diff-Dev.md
echo "" >> diff-output/diff-\${environment}.md
echo "<details>" >> diff-output/diff-\${environment}.md
echo "<summary>Show diff</summary>" >> diff-output/diff-\${environment}.md
echo "" >> diff-output/diff-\${environment}.md
echo '\`\`\`' >> diff-output/diff-\${environment}.md
for file in $(find . -path "**/cdk.out/diff.log" 2>/dev/null); do
  echo "========== $file ==========" >> diff-output/diff-\${environment}.md
  sed 's/\\x1B\\[[0-9;]*[mGKHF]//g' "$file" >> diff-output/diff-\${environment}.md
  echo "" >> diff-output/diff-\${environment}.md
done
echo '\`\`\`' >> diff-output/diff-\${environment}.md
echo "</details>" >> diff-output/diff-\${environment}.md
echo "" >> diff-output/diff-\${environment}.md",
      },
      {
        "continueOnError": undefined,
        "env": undefined,
        "id": undefined,
        "if": undefined,
        "name": "Upload diff output",
        "timeoutMinutes": undefined,
        "uses": "actions/upload-artifact@v7",
        "with": {
          "name": "diff-output-Dev",
          "overwrite": true,
          "path": "diff-output/",
          "retention-days": 1,
        },
        "workingDirectory": undefined,
      },
    ],
  },
  "Diff-Annotation-Prod": {
    "env": {
      "STACK_ENV": "Prod",
    },
    "needs": [
      "build",
    ],
    "permissions": {
      "contents": "read",
      "idToken": "write",
    },
    "runsOn": [
      "ubuntu-latest",
    ],
    "steps": [
      {
        "continueOnError": undefined,
        "env": undefined,
        "id": undefined,
        "if": undefined,
        "name": "Checkout",
        "timeoutMinutes": undefined,
        "uses": "actions/checkout@v6",
        "with": {
          "fetch-depth": 0,
          "ref": "\${{ github.sha }}",
        },
        "workingDirectory": undefined,
      },
      {
        "name": "Setup pnpm",
        "uses": "pnpm/action-setup@v5",
        "with": {
          "version": "10",
        },
      },
      {
        "name": "Setup Node.js",
        "uses": "actions/setup-node@v6",
        "with": {
          "node-version": "20.0.0",
          "package-manager-cache": false,
        },
      },
      {
        "name": "Install dependencies",
        "run": "pnpm i --frozen-lockfile",
      },
      {
        "env": {
          "accessKeyId": "\${{ secrets[AWS_ACCESS_KEY_ID] }}",
          "region": "us-east-2",
          "secretAccessKey": "\${{ secrets[AWS_SECRET_ACCESS_KEY] }}",
        },
        "if": undefined,
        "name": "Configure AWS Credentials",
        "run": "echo "AWS_ACCESS_KEY_ID=$accessKeyId" >> $GITHUB_ENV
echo "AWS_SECRET_ACCESS_KEY=$secretAccessKey" >> $GITHUB_ENV
echo "AWS_REGION=$region" >> $GITHUB_ENV",
      },
      {
        "env": {
          "CONFIG_VALUE": "Prod",
        },
        "name": "Setting NPM Config",
        "run": "npm config set TEST_CONFIG_ENV $CONFIG_VALUE",
      },
      {
        "if": undefined,
        "name": "Run Generate Diff Output",
        "run": "pnpm run diff:output",
      },
      {
        "env": {
          "environment": "Prod",
        },
        "id": "formatted_diff_annotation_comment",
        "name": "Get formatted diff annotation comment",
        "run": "mkdir -p diff-output
echo "### Changes for environment Prod" > diff-output/diff-Prod.md
echo "" >> diff-output/diff-\${environment}.md
echo "<details>" >> diff-output/diff-\${environment}.md
echo "<summary>Show diff</summary>" >> diff-output/diff-\${environment}.md
echo "" >> diff-output/diff-\${environment}.md
echo '\`\`\`' >> diff-output/diff-\${environment}.md
for file in $(find . -path "**/cdk.out/diff.log" 2>/dev/null); do
  echo "========== $file ==========" >> diff-output/diff-\${environment}.md
  sed 's/\\x1B\\[[0-9;]*[mGKHF]//g' "$file" >> diff-output/diff-\${environment}.md
  echo "" >> diff-output/diff-\${environment}.md
done
echo '\`\`\`' >> diff-output/diff-\${environment}.md
echo "</details>" >> diff-output/diff-\${environment}.md
echo "" >> diff-output/diff-\${environment}.md",
      },
      {
        "continueOnError": undefined,
        "env": undefined,
        "id": undefined,
        "if": undefined,
        "name": "Upload diff output",
        "timeoutMinutes": undefined,
        "uses": "actions/upload-artifact@v7",
        "with": {
          "name": "diff-output-Prod",
          "overwrite": true,
          "path": "diff-output/",
          "retention-days": 1,
        },
        "workingDirectory": undefined,
      },
    ],
  },
}
`;

exports[`DeployableAwsCdkTypeScriptAppStepsFactory diffAnnotationJobs Should generate diff annotation jobs When No Auth provider and npm config set 1`] = `
{
  "Diff-Annotation-Comment": {
    "needs": [
      "Diff-Annotation-Dev",
      "Diff-Annotation-Prod",
    ],
    "permissions": {
      "contents": "read",
      "pullRequests": "write",
    },
    "runsOn": [
      "ubuntu-latest",
    ],
    "steps": [
      {
        "continueOnError": undefined,
        "env": undefined,
        "id": undefined,
        "if": undefined,
        "name": "Download all diff artifacts",
        "timeoutMinutes": undefined,
        "uses": "actions/download-artifact@v8",
        "with": {
          "merge-multiple": true,
          "path": "diff-outputs",
          "pattern": "diff-output-*",
        },
        "workingDirectory": undefined,
      },
      {
        "name": "Annotate PR with Diff Output",
        "uses": "mshick/add-pr-comment@v3",
        "with": {
          "message-id": "diff-output",
          "message-path": "diff-outputs/*.md",
          "refresh-message-position": true,
        },
      },
    ],
  },
  "Diff-Annotation-Dev": {
    "env": {
      "STACK_ENV": "Dev",
    },
    "needs": [
      "build",
    ],
    "permissions": {
      "contents": "read",
      "idToken": undefined,
    },
    "runsOn": [
      "ubuntu-latest",
    ],
    "steps": [
      {
        "continueOnError": undefined,
        "env": undefined,
        "id": undefined,
        "if": undefined,
        "name": "Checkout",
        "timeoutMinutes": undefined,
        "uses": "actions/checkout@v6",
        "with": {
          "fetch-depth": 0,
          "ref": "\${{ github.sha }}",
        },
        "workingDirectory": undefined,
      },
      {
        "name": "Setup pnpm",
        "uses": "pnpm/action-setup@v5",
        "with": {
          "version": "10",
        },
      },
      {
        "name": "Setup Node.js",
        "uses": "actions/setup-node@v6",
        "with": {
          "node-version": "20.0.0",
          "package-manager-cache": false,
        },
      },
      {
        "name": "Install dependencies",
        "run": "pnpm i --frozen-lockfile",
      },
      {
        "env": {
          "accessKeyId": "\${{ secrets[AWS_ACCESS_KEY_ID] }}",
          "region": "us-east-1",
          "secretAccessKey": "\${{ secrets[AWS_SECRET_ACCESS_KEY] }}",
        },
        "if": undefined,
        "name": "Configure AWS Credentials",
        "run": "echo "AWS_ACCESS_KEY_ID=$accessKeyId" >> $GITHUB_ENV
echo "AWS_SECRET_ACCESS_KEY=$secretAccessKey" >> $GITHUB_ENV
echo "AWS_REGION=$region" >> $GITHUB_ENV",
      },
      {
        "if": undefined,
        "name": "Run Generate Diff Output",
        "run": "pnpm run diff:output",
      },
      {
        "env": {
          "environment": "Dev",
        },
        "id": "formatted_diff_annotation_comment",
        "name": "Get formatted diff annotation comment",
        "run": "mkdir -p diff-output
echo "### Changes for environment Dev" > diff-output/diff-Dev.md
echo "" >> diff-output/diff-\${environment}.md
echo "<details>" >> diff-output/diff-\${environment}.md
echo "<summary>Show diff</summary>" >> diff-output/diff-\${environment}.md
echo "" >> diff-output/diff-\${environment}.md
echo '\`\`\`' >> diff-output/diff-\${environment}.md
for file in $(find . -path "**/cdk.out/diff.log" 2>/dev/null); do
  echo "========== $file ==========" >> diff-output/diff-\${environment}.md
  sed 's/\\x1B\\[[0-9;]*[mGKHF]//g' "$file" >> diff-output/diff-\${environment}.md
  echo "" >> diff-output/diff-\${environment}.md
done
echo '\`\`\`' >> diff-output/diff-\${environment}.md
echo "</details>" >> diff-output/diff-\${environment}.md
echo "" >> diff-output/diff-\${environment}.md",
      },
      {
        "continueOnError": undefined,
        "env": undefined,
        "id": undefined,
        "if": undefined,
        "name": "Upload diff output",
        "timeoutMinutes": undefined,
        "uses": "actions/upload-artifact@v7",
        "with": {
          "name": "diff-output-Dev",
          "overwrite": true,
          "path": "diff-output/",
          "retention-days": 1,
        },
        "workingDirectory": undefined,
      },
    ],
  },
  "Diff-Annotation-Prod": {
    "env": {
      "STACK_ENV": "Prod",
    },
    "needs": [
      "build",
    ],
    "permissions": {
      "contents": "read",
      "idToken": undefined,
    },
    "runsOn": [
      "ubuntu-latest",
    ],
    "steps": [
      {
        "continueOnError": undefined,
        "env": undefined,
        "id": undefined,
        "if": undefined,
        "name": "Checkout",
        "timeoutMinutes": undefined,
        "uses": "actions/checkout@v6",
        "with": {
          "fetch-depth": 0,
          "ref": "\${{ github.sha }}",
        },
        "workingDirectory": undefined,
      },
      {
        "name": "Setup pnpm",
        "uses": "pnpm/action-setup@v5",
        "with": {
          "version": "10",
        },
      },
      {
        "name": "Setup Node.js",
        "uses": "actions/setup-node@v6",
        "with": {
          "node-version": "20.0.0",
          "package-manager-cache": false,
        },
      },
      {
        "name": "Install dependencies",
        "run": "pnpm i --frozen-lockfile",
      },
      {
        "env": {
          "accessKeyId": "\${{ secrets[AWS_ACCESS_KEY_ID] }}",
          "region": "us-east-2",
          "secretAccessKey": "\${{ secrets[AWS_SECRET_ACCESS_KEY] }}",
        },
        "if": undefined,
        "name": "Configure AWS Credentials",
        "run": "echo "AWS_ACCESS_KEY_ID=$accessKeyId" >> $GITHUB_ENV
echo "AWS_SECRET_ACCESS_KEY=$secretAccessKey" >> $GITHUB_ENV
echo "AWS_REGION=$region" >> $GITHUB_ENV",
      },
      {
        "if": undefined,
        "name": "Run Generate Diff Output",
        "run": "pnpm run diff:output",
      },
      {
        "env": {
          "environment": "Prod",
        },
        "id": "formatted_diff_annotation_comment",
        "name": "Get formatted diff annotation comment",
        "run": "mkdir -p diff-output
echo "### Changes for environment Prod" > diff-output/diff-Prod.md
echo "" >> diff-output/diff-\${environment}.md
echo "<details>" >> diff-output/diff-\${environment}.md
echo "<summary>Show diff</summary>" >> diff-output/diff-\${environment}.md
echo "" >> diff-output/diff-\${environment}.md
echo '\`\`\`' >> diff-output/diff-\${environment}.md
for file in $(find . -path "**/cdk.out/diff.log" 2>/dev/null); do
  echo "========== $file ==========" >> diff-output/diff-\${environment}.md
  sed 's/\\x1B\\[[0-9;]*[mGKHF]//g' "$file" >> diff-output/diff-\${environment}.md
  echo "" >> diff-output/diff-\${environment}.md
done
echo '\`\`\`' >> diff-output/diff-\${environment}.md
echo "</details>" >> diff-output/diff-\${environment}.md
echo "" >> diff-output/diff-\${environment}.md",
      },
      {
        "continueOnError": undefined,
        "env": undefined,
        "id": undefined,
        "if": undefined,
        "name": "Upload diff output",
        "timeoutMinutes": undefined,
        "uses": "actions/upload-artifact@v7",
        "with": {
          "name": "diff-output-Prod",
          "overwrite": true,
          "path": "diff-output/",
          "retention-days": 1,
        },
        "workingDirectory": undefined,
      },
    ],
  },
}
`;
